Add complete model, configuration, filter, client, service, and controller classes